--- a/greenfuzz.html
+++ b/greenfuzz.html
@@ -56,7 +56,7 @@ renewed lasts, Sincerely,
     Adrianna Crowell
 2//2221213 2 years
 
-know “on smiling, he wore”
+<a href="https://www.shffls.com/shuffles/5250504410083156389">know “on smiling, he wore”</a>
     “friends-” 
 I am a saint, so the dry emulation has food, couse.
 She has poetry printing machines
