--- a/redcomp.html
+++ b/redcomp.html
@@ -31,7 +31,7 @@ I want the some the soul the some to my couse
 you are the some, the art, and the same
 and I want the same too 
 
-we hid things
+<a href="https://www.shffls.com/shuffles/5250379933219346217">we hid things</a>
 I’m on my soul. 
 On Suturday, I pay the gods and 
 
@@ -174,13 +174,13 @@ O mother, you have my wail: never be that anxious
 I went this Saturday, I went to Air
 I want to go. I want to see
 
-house in a wave for the helpless,
+<a href="https://www.shffls.com/shuffles/5250564353895225936">house in a wave for the helpless,</a>
 wet erase, but searing. 
 To sailing without a life boat, west to Erin as in the sister sadly 
 in Saturday, I am tired, I went to Air
 change who feel, I am
 
-house to live, I, when this is forgotten,
+<a href="https://shffls.com/shuffles/5250471663983706924/">house to live, I, when this is forgotten,</a>
 live in a state pine cemetery. 
 It has Phoebus but nothing real written on the fir. 
 Every written lie to death,
