--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="diary-pic"><a href="tealfloral.html"><img src="covers/TealFloral.jpg" alt="Shiny teal journal cover with multicolor flowers"></a></div>
                 <div class="diary-pic"><a href="grey.html"><img src="covers/Grey.jpg" alt="Grey journal cover"></a></div>
                 <div class="diary-pic"><a href="all1.html"><img src="covers/PinkFloral.jpg" alt="White journal cover with pink and purple flowers"></a></div>
-                <div class="diary-pic"><img src="unfinished/Green.png" alt="Plain green journal"></div>
+                <div class="diary-pic"><a href="all2.html"><img src="covers/Green.jpg" alt="Plain green journal"></a></div>
                 <div></div>
             </div>
         </div>
