--- a/red.html
+++ b/red.html
@@ -35,7 +35,7 @@ feel like whine
 ot/2012
 14 yeart eld
 D ar aryD
-ar D airy,
+ar airy,
 I will too soon the loom,
 awake  and both  gone
 I  sat here by myself  how then they took
